--- a/src/scss/components/_house-content.scss
+++ b/src/scss/components/_house-content.scss
@@ -145,6 +145,9 @@
     position: relative;
     z-index: 2;
     display: flex;
+    picture {
+      width: 100%;
+    }
     img {
       will-change: transform;
       width: 100%;
